# genzolars

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/genzolars/: __init__.py  __main__.py  _aliases.py
tests/: test_genzolars.py
